kyy-k8s-config/src/app/backend/go-admin/go-admin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: go-admin
  name: go-admin
spec:
  replicas: 2
  strategy: {}
  template:
    metadata:
      labels:
        app: go-admin
    spec:
      containers:
        - name: go-admin
          image: registry.cn-beijing.aliyuncs.com/kaoyaya-micro/admin
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
